# fastapi-keycloak-middleware

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-lint.properties.json  python-lint.yml  release.yml
docs/: advanced_topics.rst  api.rst  authorization.rst  conf.py  index.rst  intro.rst  requirements.txt  testing.rst  usage.rst
fastapi_keycloak_middleware/: __init__.py  exceptions.py  fast_api_user.py  keycloak_backend.py  middleware.py  setup.py
fastapi_keycloak_middleware/decorators/: require_permission.py  strip_request.py
fastapi_keycloak_middleware/dependencies/: __init__.py  check_permission.py  get_auth.py  get_authorization_result.py  get_user.py
fastapi_keycloak_middleware/schemas/: authorization_methods.py  authorization_result.py  exception_response.py  keycloak_configuration.py  match_strategy.py
