[tool.poetry]
name = "fastapi-keycloak-middleware"
version = "0.2.2"
description = "Middleware for FastAPI to authenticate a user against keycloak"
authors = ["Daniel Herrmann <daniel.herrmann1@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_keycloak_middleware" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.73.0"
install = "^1.3.5"
python-keycloak = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
ruff = "^0.0.259"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
